# risk-weave

./: .branch-protection-check.tmp  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RISKWEAVE_MASTER_SPEC_MERGED.md  docker-compose.yml  railway.ingest.json  railway.json  railway.pipeline.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260711_01_ingestion_schema.py  20260711_02_extraction_pipeline.py  20260714_01_scenario_persistence.py  20260715_01_provider_cost_accounting.py
backend/benchmarks/: bench_propagation.py
backend/data/fixtures/: cre_graph.json
backend/riskweave/: __init__.py
backend/riskweave/accounting/: __init__.py  pricing.py
backend/riskweave/breach/: README.md  __init__.py  distance.py
backend/riskweave/derivations/: README.md  __init__.py  duration.py  magnitude.py  methods.py  provenance.py  registry.py
backend/riskweave/entity_resolution/: __init__.py  resolver.py
backend/riskweave/evaluation/: __init__.py  labeling.py  live_bridge.py  metrics.py  report.py
backend/riskweave/explain/: __init__.py  generation.py  guard.py  payload.py  qa.py  tools.py
backend/riskweave/graph/: README.md  __init__.py  assembly.py  build_live.py  centrality.py  fixture.py  live.py  seed.py  store.py
backend/riskweave/propagation/: README.md  __init__.py  engine.py  graph.py
backend/riskweave/scenario/: __init__.py  catalog.py  models.py  parser.py  presets.py  templates.py  validation.py
backend/src/riskweave_api/: __init__.py  cache.py  db_models.py  dependencies.py  main.py  models.py  postgres_scenario_store.py  result_conversion.py  scenario_store.py  security.py  settings.py
backend/src/riskweave_api/accounting/: __init__.py  (+2 more)
backend/tests/: conftest.py  test_accounting.py  test_admin_pipeline.py  test_breach_distance.py  test_cors.py  test_demo_freeze.py  test_duration.py  test_entity_resolution.py  test_evaluation.py  test_evaluation_api.py  test_evaluation_report.py  test_explanation_api.py  test_explanation_generation.py  test_explanation_guard.py  test_extraction.py  test_gemini_live.py  test_gemini_tool_transport.py  test_gemini_transport.py  test_graph_assembly.py  test_graph_endpoint.py  test_graph_fixture.py  test_graph_live_endpoint.py  test_graph_store.py  test_graph_write_gate.py  test_health.py  test_ingestion.py  test_live_graph.py  test_magnitude.py  test_methods.py  test_observability_connectivity.py  test_observability_logging.py  test_observability_metrics.py  test_pipeline_db.py  test_postgres_ingestion.py  test_propagation.py  test_propagation_properties.py  test_provenance.py  test_qa_api.py  test_qa_session.py  test_qa_tools.py  (+14 more)
(+147 files in other folders)
