[project]
name = "riskweave-backend"
version = "0.1.0"
description = "RiskWeave backend: deterministic edge-weight derivation library (spec §12.1)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["riskweave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
