[project]
name = "riskweave-api"
version = "0.1.0"
description = "RiskWeave backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi==0.139.0",
    "numpy>=1.26",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy>=2.0,<3",
    "statsmodels>=0.14",
    "redis[hiredis]>=5.0,<6",
    "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
riskweave-ingest = "riskweave_api.ingestion.cli:main"
riskweave-resolve = "riskweave_api.ingestion.resolution_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx2>=2.5,<3",
    "hypothesis>=6.100,<7",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["riskweave*", "riskweave_api*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI Depends() in function signatures is the idiomatic pattern
per-file-ignores = {"src/riskweave_api/routers/*.py" = ["B008"]}
